# swagger.yml
@@ -27,7 +27,53 @@ tags:
   description: Operations that start with publishedTests
 - name: answer
   description: Operations that start with answers
+- name: configuration
+  description: Operations related to general settings of the application
 paths:
+  /emailConfiguration:
+    get:
+      security:
+        - BearerCookie: []
+      tags:
+      - configuration
+      summary: Returns the information about the current configuration related to email service
+      operationId: GetEmailConfiguration
+      description: Returns the information about the current configuration related to email service
+      produces:
+      - application/json
+      responses:
+        200:
+          description: Email configuration found successfully
+          schema:
+            $ref: '#/definitions/EmailConfiguration'
+        403:
+          $ref: '#/responses/ForbiddenError'
+        500:
+          $ref: '#/responses/InternalServerError'
+    put:
+      security:
+        - BearerCookie: []
+      tags:
+      - configuration
+      summary: Modifies the information related to the configuration of the email service
+      operationId: PutEmailConfiguration
+      description: Modifies the information related to the configuration of the email service
+      consumes:
+      - application/json
+      parameters:
+      - in: body
+        name: emailConfiguration
+        description: New email configuration
+        required: true
+        schema:
+          $ref: '#/definitions/EmailConfiguration'
+      responses:
+        200:
+          description: Email configuration updated
+        403:
+          $ref: '#/responses/ForbiddenError'
+        500:
+          $ref: '#/responses/InternalServerError'
   /accesstokens:
     post:
       tags:
@@ -6127,6 +6173,33 @@ definitions:
       title:
         type: string
         example: Nuevo titulo
+  EmailConfiguration:
+    type: object
+    required:
+    - from
+    - password
+    - serverhost
+    - serverport
+    - frontendurl
+    properties:
+      from:
+        type: string
+        example: carlos@mail.com
+        format: email
+        pattern: '^[^@ \t\r\n]+@[^@ \t\r\n]+\.[^@ \t\r\n]+$'
+      password:
+        type: string
+        example: password
+      serverhost:
+        type: string
+        example: smtp.gmail.com
+      serverport:
+        type: integer
+        example: 587
+      frontendurl:
+        type: string
+        example: https://devtest.com
+
   Message:
     type: object
     required:
